--- a/sg-notify/sg-notify.less
+++ b/sg-notify/sg-notify.less
@@ -28,21 +28,21 @@ html {
 
 			&.hiding.out {
 
-				pointer-events: none;
+				pointer-events: none !important;
 
 				>section {
 
-					pointer-evens: none;
+					pointer-events: none !important;
 
 					>i {
 
-						pointer-evens: none;
+						pointer-events: none !important;
 
 					}
 
 					>aside {
 
-						pointer-events: none;
+						pointer-events: none !important;
 
 					}
 
@@ -53,7 +53,7 @@ html {
 			&.hiding.block {
 
 				.box-shadow(inset 0 0 200px rgba(0, 0, 0, 0));
-				.transition(box-shadow 1s);
+				.transition(box-shadow .5s);
 
 			}
 
